--- a/.env
+++ b/.env
@@ -17,4 +17,6 @@ APP_ENV=development
 SDK_BASE_URL=https://flex-template-web.sharetribe.com
 REACT_NATIVE_SDK_BASE_URL=http://localhost:3500
 
-SENTRY_DSN =''
+SENTRY_DSN=''
+
+DEV_API_SERVER_PORT=3500
