--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@reduxjs/toolkit": "^2.11.1",
+    "decimal.js": "^10.6.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-config": "^1.6.1",
