feat(configuration): Enhance environment and configuration files
- Add FACEBOOK_APP_ID and GOOGLE_MAPS_API_KEY to .env for social media integration
- Introduce new configuration files for branding, layout, listing, maps, search, and user settings
- Update configDefault.ts to include new configurations and improve structure
- Implement default location searches and enhance Stripe configuration
- Expand type definitions for environment variables and configuration helpers
- Streamline the export of configuration modules for better organization

--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ REACT_NATIVE_SDK_BASE_URL=http://localhost:3500
 SENTRY_DSN=''
 
 DEV_API_SERVER_PORT=3500
+
+FACEBOOK_APP_ID=
+
+GOOGLE_MAPS_API_KEY=
