--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@reduxjs/toolkit": "^2.11.1",
     "decimal.js": "^10.6.0",
+    "lodash": "^4.17.21",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-config": "^1.6.1",
@@ -44,6 +45,7 @@
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.21",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
