feat(navigation): Implement authentication-based navigation system
- Add AppNavigator and AuthNavigator components for conditional navigation flow
- Create navigationConfig with native stack navigation options and screen animations
- Add SCREENS constants for centralized screen name management
- Implement authentication state selectors in auth.slice for navigation logic
- Add navigation type definitions (AuthStackParamList, AppStackParamList)
- Create Login and Signup screen components with basic structure
- Update Root component to conditionally render navigators based on auth state
- Enable @navigators and @screens module path aliases in babel and metro configs
- Add VSCode settings configuration file
- Integrate NavigationContainer and implement auth state fetching on app initialization
- Add loading state handling while authentication info is being processed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
       "@context/*": ["context/*"],
       // "@hooks/*": ["hooks/*"],
       // "@locales/*": ["locales/*"],
-      // "@navigation/*": ["navigation/*"],
+      "@navigators/*": ["navigators/*"],
       "@redux/*": ["redux/*"],
-      // "@screens/*": ["screens/*"],
+      "@screens/*": ["screens/*"],
       // "@scripts/*": ["scripts/*"],
       "@transactions/*": ["transactions/*"],
       "@appTypes/*": ["types/*"],
