feat(sign-up): Enhance signup process with custom user fields and validation
- Introduce new components for handling custom user fields in the signup process.
- Implement validation for email, password, and other user input fields using React Hook Form.
- Add a Home screen component and update navigation to include the new Home screen.
- Refactor existing signup components to improve structure and maintainability.
- Update package.json to include moment-timezone and react-hook-form dependencies for date handling and form management.
- Modify auth slice to include logout functionality and improve user state management.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@reduxjs/toolkit": "^2.11.1",
     "decimal.js": "^10.6.0",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.6.0",
     "react": "19.1.1",
+    "react-hook-form": "^7.68.0",
     "react-native": "0.82.1",
     "react-native-config": "^1.6.1",
     "react-native-gesture-handler": "^2.29.1",
