google signup configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 
-SHARETRIBE_SDK_CLIENT_ID=28176bde-dcdc-4036-9f9c-a3bcdba34801
-SHARETRIBE_SDK_CLIENT_SECRET=fc566f75eb12d982b1436a7d079af58aa185ed55
+# SHARETRIBE_SDK_CLIENT_ID=28176bde-dcdc-4036-9f9c-a3bcdba34801
+SHARETRIBE_SDK_CLIENT_ID=25e3baae-9829-4d7c-b382-317f7b58a387
+
+# SHARETRIBE_SDK_CLIENT_SECRET=fc566f75eb12d982b1436a7d079af58aa185ed55ßß
+SHARETRIBE_SDK_CLIENT_SECRET=d7f73c0abe9116031a6508742c7eada04b749d9a
+
+
 
 SHARETRIBE_SDK_TRANSIT_VERBOSE =
 SHARETRIBE_USING_SSL =
