--- a/ios/APP_TEMPLATE/Info.plist
+++ b/ios/APP_TEMPLATE/Info.plist
@@ -27,6 +27,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>google</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.1050292415978-c23icstaunc80fd92ld4vvm1fn1egtpo</string>
