--- a/.env
+++ b/.env
@@ -33,5 +33,7 @@ GOOGLE_MAPS_API_KEY=
 REACT_APP_GOOGLE_ANALYTICS_ID=
 REACT_APP_PLAUSIBLE_DOMAINS=
 
-GOOGLE_WEB_CLIENT_ID=1050292415978-nl2hlno000sb6827gl4eugvi4sd2dav8.apps.googleusercontent.com
-GOOGLE_IOS_CLIENT_ID=1050292415978-c23icstaunc80fd92ld4vvm1fn1egtpo.apps.googleusercontent.com
+# GOOGLE_WEB_CLIENT_ID=1050292415978-nl2hlno000sb6827gl4eugvi4sd2dav8.apps.googleusercontent.com
+GOOGLE_WEB_CLIENT_ID=105323808148-q69q5jl92adv8cu1gpmfrtg6gmsgiqmn.apps.googleusercontent.com
+# GOOGLE_IOS_CLIENT_ID=1050292415978-c23icstaunc80fd92ld4vvm1fn1egtpo.apps.googleusercontent.com
+GOOGLE_IOS_CLIENT_ID=105323808148-3b8sjcash69abmfrg0e0r458k8ma4ngg.apps.googleusercontent.com
