--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 
-SHARETRIBE_SDK_CLIENT_ID=1eebaae0-0e48-4b87-92a6-40f3094083b2
-SHARETRIBE_SDK_CLIENT_SECRET=32842fd6efc6920ec0e562273fcc57db6dbaf07b
+# SHARETRIBE_SDK_CLIENT_ID=28176bde-dcdc-4036-9f9c-a3bcdba34801
+SHARETRIBE_SDK_CLIENT_ID=2d23ebf1-dfaf-40ac-9421-6b9f3967d9ad
+
+# SHARETRIBE_SDK_CLIENT_SECRET=fc566f75eb12d982b1436a7d079af58aa185ed55ßß
+SHARETRIBE_SDK_CLIENT_SECRET=548b7ab6b20f29efecb3b3e5f77d2878684ba7dc
+
+apikey=bde27983b7d04c407fbb22cb543d69f8a7d38ef0
 
 SHARETRIBE_SDK_TRANSIT_VERBOSE =
 SHARETRIBE_USING_SSL =
